--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -90,7 +90,7 @@ body{
     .facebook-text{
         text-align: justify;
     }
-    .login-button{
+    /* .login-button{
         padding-bottom: 10vh;
-    }
+    } */
 }
